Fix links page message align

--- a/app/styles/links.css
+++ b/app/styles/links.css
@@ -23,3 +23,8 @@
     height: 16px;
     margin: 0 5px;
 }
+
+.link-message {
+    width: 100%;
+    text-align: center;
+}
